# jet-k8s

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: debug-sessions.md  jupyter-notebooks.md  monitoring-jobs.md  other-commands.md  services.md  submitting-jobs.md  templates.md
jet/: __init__.py  config.py  defaults.py  jet.py  job_builder.py  job_config.py  process_args.py  utils.py
jet/tui/: k8s.py  screens.py  styles.py
